--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
         <slf4j.version>1.7.35</slf4j.version>
         <logback.version>1.2.10</logback.version>
         <lombok.version>1.18.22</lombok.version>
+        <javax.version>2.0.1.Final</javax.version>
+        <javax.el.version>3.0.0</javax.el.version>
+        <hibernate.version>6.2.1.Final</hibernate.version>
+        <eclipse-collection.version>11.0.0</eclipse-collection.version>
     </properties>
 
     <dependencies>
@@ -24,6 +28,7 @@
             <version>${telegrambots.version}</version>
         </dependency>
 
+        <!-- Logger Tools -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -42,12 +47,43 @@
             <version>${logback.version}</version>
         </dependency>
 
+        <!-- Validation Tools -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${javax.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>javax.el</artifactId>
+            <version>${javax.el.version}</version>
+        </dependency>
+
+        <!-- Development Tools -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections-api</artifactId>
+            <version>${eclipse-collection.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.collections</groupId>
+            <artifactId>eclipse-collections</artifactId>
+            <version>${eclipse-collection.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
