Add feature delete
Pass id in message
Create message util to grab id
Update button delete only

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>HikariCP</artifactId>
             <version>${hikari.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>5.1.1</version>
+        </dependency>
 
         <!-- Logger Tools -->
         <dependency>
