--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,17 @@
             <artifactId>HikariCP</artifactId>
             <version>${hikari.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.vdurmont</groupId>
             <artifactId>emoji-java</artifactId>
             <version>5.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.3.2</version>
         </dependency>
 
         <!-- Logger Tools -->
@@ -87,6 +93,7 @@
             <artifactId>eclipse-collections</artifactId>
             <version>${eclipse-collection.version}</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
